--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,4 +6,6 @@ steps:
   # Deploy to App Engine
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
-timeout: '1600s' 
+timeout: '1600s'
+options:
+  logging: CLOUD_LOGGING_ONLY 
